--- a/GJ1P/src/app.html
+++ b/GJ1P/src/app.html
@@ -1,3 +1,8 @@
+
+<script>
+    import '../app.css';
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -6,7 +11,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="bg-slate-700">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
